styles...page-header-mixin: Handle SVGs correctly for brandimage on IE11.

--- a/django_cradmin/apps/django_cradmin_styles/staticsources/django_cradmin_styles/styles/basetheme/4__components/_mixins.scss
+++ b/django_cradmin/apps/django_cradmin_styles/staticsources/django_cradmin_styles/styles/basetheme/4__components/_mixins.scss
@@ -55,6 +55,8 @@
         border: none;
         height: 100%;
         width: auto;
+        object-position: left center;
+        object-fit: contain;
     }
 
     &__nav {
